<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="viewModel" type="ru.yandex.dunaev.mick.bookingme.MainViewModel"/>
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout android:layout_width="match_parent"
                                                       android:layout_height="match_parent"
                                                       tools:context=".AccountFragment"
                                                       android:background="@drawable/account_background"
                                                       android:animateLayoutChanges="true">

        <!-- TODO: Update blank fragment layout -->

        <ImageView
                android:contentDescription="@string/logo_text"
                android:src="@drawable/ic_logo"
                android:layout_width="115dp"
                android:layout_height="40dp" android:id="@+id/imageView"
                android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toTopOf="@+id/guideline" app:layout_constraintTop_toTopOf="@+id/guideline"
                android:scaleType="fitCenter" app:layout_constraintStart_toStartOf="@+id/guideline2"
        />
        <androidx.constraintlayout.widget.Guideline
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" app:layout_constraintGuide_begin="54dp"
                android:id="@+id/guideline"/>
        <androidx.constraintlayout.widget.Guideline
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" app:layout_constraintGuide_begin="32dp"
                android:id="@+id/guideline2"/>
        <androidx.constraintlayout.widget.Guideline
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/guideline3" app:layout_constraintGuide_end="32dp"/>
        <Button
                android:gravity="start|center_vertical"
                android:text="@string/sign_in_with_google"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@drawable/button_google"
                android:textColor="@android:color/white" android:textAllCaps="false"
                android:fontFamily="@font/roboto_medium"
                app:layout_constraintStart_toStartOf="@+id/guideline2"
                app:layout_constraintEnd_toStartOf="@+id/guideline3" android:textSize="16sp"
                android:drawableStart="@drawable/ic_google_plus_logo_symbol"
                app:layout_constraintHorizontal_bias="0.0" android:layout_marginBottom="12dp"
                app:layout_constraintBottom_toTopOf="@+id/button_sign_facebook" android:id="@+id/button_sign_google"
                android:paddingStart="40dp" android:drawablePadding="40dp"/>
        <Button
                android:gravity="start|center_vertical"
                android:text="@string/sign_in_with_facebook"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@drawable/button_facebook"
                android:textColor="@android:color/white" android:textAllCaps="false"
                android:fontFamily="@font/roboto_medium"
                app:layout_constraintStart_toStartOf="@+id/guideline2"
                app:layout_constraintEnd_toStartOf="@+id/guideline3" android:textSize="16sp"
                android:drawableStart="@drawable/ic_logo_facebook"
                app:layout_constraintHorizontal_bias="0.0" android:layout_marginTop="8dp"
                app:layout_constraintTop_toTopOf="@+id/guideline4"
                app:layout_constraintBottom_toTopOf="@+id/guideline4" android:id="@+id/button_sign_facebook"
                android:paddingStart="40dp" android:drawablePadding="40dp"/>
        <Button
                android:gravity="start|center_vertical"
                android:text="@string/sign_in_with_email"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@drawable/button_email"
                android:textColor="@android:color/white" android:textAllCaps="false"
                android:fontFamily="@font/roboto_medium"
                app:layout_constraintStart_toStartOf="@+id/guideline2"
                app:layout_constraintEnd_toStartOf="@+id/guideline3" android:textSize="16sp"
                android:drawableStart="@drawable/ic_logo_email"
                app:layout_constraintHorizontal_bias="0.0" android:layout_marginTop="12dp"
                app:layout_constraintTop_toBottomOf="@+id/button_sign_facebook" android:id="@+id/button_sign_email"
                android:drawablePadding="40dp" android:paddingStart="40dp"/>
        <TextView
                android:text="@string/let_s_get_started"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView"
                android:textColor="@android:color/white" android:textSize="16sp" android:fontFamily="@font/roboto"
                app:layout_constraintStart_toStartOf="@+id/guideline2" android:layout_marginBottom="16dp"
                app:layout_constraintBottom_toTopOf="@+id/button_sign_google"/>
        <androidx.constraintlayout.widget.Guideline
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/guideline4" app:layout_constraintGuide_percent="0.5"/>
        <TextView
                android:text="@string/create_your_account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textCreateAccount"
                android:textColor="@color/text_color" android:fontFamily="@font/roboto_medium"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="@+id/guideline2" android:layout_marginTop="24dp"
                app:layout_constraintTop_toBottomOf="@+id/button_sign_email"/>
        <TextView
                android:text="@string/privacy"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/textPrivacy"
                android:textColor="@color/colorTextGray" android:layout_marginTop="24dp"
                app:layout_constraintTop_toBottomOf="@+id/textCreateAccount"
                app:layout_constraintStart_toStartOf="@+id/guideline2"
                app:layout_constraintEnd_toStartOf="@+id/guideline3" android:fontFamily="@font/roboto"
                android:clickable="true"/>
        <TextView
                android:text="Find deals for any season"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textTitle"
                android:textColor="@android:color/white" android:fontFamily="@font/roboto"
                app:layout_constraintStart_toStartOf="@+id/guideline2"
                android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/imageView"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>